feat: adding animations

--- a/src/app/components/items/item-list/item-list.component.html
+++ b/src/app/components/items/item-list/item-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @fadeInUp>
   <div class="content">
     <button class="main-button" mat-raised-button color="primary" [matMenuTriggerFor]="items">
       <mat-icon>list</mat-icon>
