--- a/src/app/components/locations/region-details/region-details.component.html
+++ b/src/app/components/locations/region-details/region-details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @fadeInDownBig>
     @if(location) {
         <mat-card class="menu">
             <mat-card-header>
