--- a/src/app/components/ability/ability-list/ability-list.component.html
+++ b/src/app/components/ability/ability-list/ability-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @fadeInUp>
   <div class="content">
     @if (loading) {
       <app-loading></app-loading>
