--- a/src/app/components/battle/battle-setup/battle-setup.component.html
+++ b/src/app/components/battle/battle-setup/battle-setup.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @fadeInUp>
     <mat-tab-group>
         <mat-tab label="Player Pokemon">
             <mat-form-field class="choose-pokemon">
