--- a/src/app/components/locations/location/location.component.html
+++ b/src/app/components/locations/location/location.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @bounceIn>
   @for (location of locations; track location) {
     <mat-card class="location-card" appearance="outlined"
       (click)="onLocationClick(location)">
