--- a/src/app/components/locations/area-details/area-details.component.html
+++ b/src/app/components/locations/area-details/area-details.component.html
@@ -1,5 +1,5 @@
 <div class="main-container" @fadeInUp>
-  <h1>Areas</h1>
+  <h1 class="title-area">Areas</h1>
   <mat-divider></mat-divider>
 
   <div class="areas-container">
@@ -15,7 +15,7 @@
     }
   </div>
 
-  <h2>Encounter Methods</h2>
+  <h2 class="title-area">Encounter Methods</h2>
   <mat-divider></mat-divider>
 
   <div class="methods">
@@ -36,7 +36,7 @@
     }
   </div>
 
-  <h2>Pokémon found</h2>
+  <h2 class="title-area">Pokémon found</h2>
 
   <!-- Basic Filter Component -->
   <app-basic-filter 
