--- a/src/app/components/locations/region-details/region-details.component.css
+++ b/src/app/components/locations/region-details/region-details.component.css
@@ -62,6 +62,11 @@ mat-card-title {
 
 mat-cell {
     cursor: pointer;
+    color: rgb(116, 99, 7);
+}
+
+mat-cell:hover {
+    color: red;
 }
 
 .break-line {
